--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.1",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-scrollactive": "^0.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
